--- a/pom.xml
+++ b/pom.xml
@@ -8,28 +8,28 @@
     <artifactId>ChemistMod</artifactId>
     <version>0.0.1</version>
 
-    <name>ChemistMod</name>
-    <description>A Slay the Spire class based on FF5's Chemist job</description>
+    <name>The Chemist</name>
+    <description>A Slay the Spire class loosely based on FF5's Chemist job</description>
 
     <dependencies>
         <dependency>
             <groupId>com.megacrit.cardcrawl</groupId>
             <artifactId>slaythespire</artifactId>
-            <version>016</version>
+            <version>12-18-2022</version>
             <scope>system</scope>
             <systemPath>${basedir}/../lib/desktop-1.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>basemod</groupId>
             <artifactId>basemod</artifactId>
-            <version>2.10.0</version>
+            <version>5.52.3</version>
             <scope>system</scope>
             <systemPath>${basedir}/../lib/BaseMod.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.evacipated.cardcrawl</groupId>
             <artifactId>ModTheSpire</artifactId>
-            <version>2.6.0</version>
+            <version>3.30.3</version>
             <scope>system</scope>
             <systemPath>${basedir}/../lib/ModTheSpire.jar</systemPath>
         </dependency>
